[gd_scene load_steps=13 format=2]

[ext_resource path="res://Characters/Hans/Hans.gltf" type="PackedScene" id=1]
[ext_resource path="res://Characters/Hans/HansRunning.tres" type="Animation" id=2]
[ext_resource path="res://Characters/Hans/HansShooting.tres" type="Animation" id=3]
[ext_resource path="res://Scenes/Bullets/BulletZero.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Bullets/BulletOne.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/shoot.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/shoot_something.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/token.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/coughing.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/bug_sqish.wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/Other/Hans.gd" type="Script" id=11]



[sub_resource type="CapsuleShape" id=2]

[node name="Hans" type="KinematicBody"]
collision_mask = 2
script = ExtResource( 11 )
BulletZero = ExtResource( 4 )
BulletOne = ExtResource( 5 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Hans" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="Movement" type="AnimationPlayer" parent="Pivot/Hans"]
autoplay = "HansRunning"
anims/HansRunning = ExtResource( 2 )
anims/HansShooting = ExtResource( 3 )

[node name="Muzzle" type="Position3D" parent="Pivot/Hans"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -2.19326, 7.48417, 3.45 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 3.01833, 0, 0, 0, -1.28575e-07, 3.87158, 0, -2.94145, -1.69232e-07, -0.726137, 6.64664, 0.281527 )
shape = SubResource( 2 )

[node name="Shooting_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Sick_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Sounds" type="Spatial" parent="."]

[node name="ShootSomethingDownSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="shootSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="pickUpTokenSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="bugSqishSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="coughingSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
[connection signal="timeout" from="Shooting_timer" to="." method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="Sick_timer" to="." method="_on_Sick_timer_timeout"]
